--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -11,18 +11,9 @@ permissions:
   contents: write
   pages: write
 
-  
 jobs:
   call_env_workflow:
-    uses: thomasferte/workflows/.github/workflows/global-env.yml@main
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
-    with:
-      config-path: './config/quarto_config.yml'
+    uses: computorg/workflows/.github/workflows/global-env.yml@main
   call_quartopublish_workflow:
-    uses: thomasferte/workflows/.github/workflows/publish-render.yml@main
+    uses: computorg/workflows/.github/workflows/publish-render.yml@main
     needs: call_env_workflow
-    with:
-      config-path: './config/quarto_config.yml'
-    secrets:
-      token: ${{ secrets.GITHUB_TOKEN }}
