--- a/.github/workflows/build.yml
+++ b/.github/workflows/build.yml
@@ -6,14 +6,17 @@ on:
   repository_dispatch:
     types: [custom-event] 
   workflow_dispatch:
-
-permissions:
-  contents: write
-  pages: write
+  pull_request:
+    branches: ["main"]
 
 jobs:
   call_env_workflow:
     uses: computorg/workflows/.github/workflows/global-env.yml@main
   call_quartopublish_workflow:
+    permissions:
+      id-token: write
+      contents: write
+      pages: write
     uses: computorg/workflows/.github/workflows/publish-render.yml@main
     needs: call_env_workflow
+
