--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,2 @@
-dill==0.3.9
-joblib==1.4.2
-numpy==2.2.0
-scikit-learn==1.5.2
-scipy==1.14.1
-threadpoolctl==3.5.0
-tqdm==4.67.1
+setuptools==80.9.0
+wheel==0.45.1
