--- a/requirements.txt
+++ b/requirements.txt
@@ -1,12 +1,14 @@
-dill==0.4.0
-joblib==1.4.2
-numpy==1.24.4
-packaging==24.1
-pandas==2.0.3
-plotly==5.24.1
-python-dateutil==2.9.0.post0
-pytz==2024.2
-scipy==1.10.1
-six==1.16.0
-tenacity==9.0.0
-tqdm==4.67.1
+dill
+joblib
+numpy
+packaging
+pandas
+plotly
+python-dateutil
+pytz
+scipy
+six
+tenacity
+tqdm
+reservoirpy
+tzdata
