--- a/environment.yml
+++ b/environment.yml
@@ -1,4 +1,4 @@
-name: computo-quarto-extension
+name: ferte
 channels:
   - conda-forge
 dependencies:
@@ -18,4 +18,4 @@ dependencies:
   - pytz
   - packaging
   - pip:
-    - reservoirpy
+   - reservoirpy
