--- a/environment.yml
+++ b/environment.yml
@@ -4,6 +4,10 @@ channels:
 dependencies:
   - python=3.11
   - openssl
+  - ca-certificates
+  - certifi
+  - urllib3
+  - requests
   - numpy
   - pandas
   - scipy
